// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VListTile.vue should render <li> with <a> when using href prop 1`] = `

<li>
  <a href="http://www.google.com"
     class="list__tile list__tile--link"
     data-ripple="false"
  >
  </a>
</li>

`;

exports[`VListTile.vue should render <li> with <button> when using to prop 1`] = `

<li>
  <button class="list__tile list__tile--link"
          data-ripple="false"
  >
  </button>
</li>

`;

exports[`VListTile.vue should render with a div when href and to are not used 1`] = `

<li>
  <div class="list__tile">
  </div>
</li>

`;
